Able to add movie to db and then display all movies currently in the db. Will be working on clicking on a single movie and be able to edit the details of that movie.

--- a/Client/index.html
+++ b/Client/index.html
@@ -6,13 +6,19 @@
 </head>
 <body>
 
-<div id="response">
+<div 
+    id="response">
     <pre></pre>
+</div>
+
+<div>
+
 </div>
 
 <form id="my-form">
     <input type="text" name="title" placeholder="Title" />
     <input type="text" name="director" placeholder="Director" />
+    <input type="text" name="genre" placeholder="Genre" />
 
     <button type="submit">Submit</button>
 </form>
