--- a/Client/index.html
+++ b/Client/index.html
@@ -6,18 +6,29 @@
 </head>
 <body>
 
-<div id="response">
-    <pre></pre>
-</div>
+	<div id="response">
+	    <pre></pre>
+	</div>
 
-<form id="my-form">
-    <input type="text" name="title" placeholder="Title" />
-    <input type="text" name="director" placeholder="Director" />
+	<form action="api/values" method="post" id="my-form">
 
-    <button type="submit">Submit</button>
-</form>
+        <input type="text" name="title" placeholder="Title" id="title-field" />
+        <input type="text" name="director" placeholder="Director" />
+        <input type="text" name="genre" placeholder="Genre" />
 
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script type="text/javascript" src="./app.js"></script>
+        <button type="submit" value="Create" id="submit">Create</button>
+    </form>
+
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+	<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
+
+<!-- <table style="width:%">
+  <tr>
+    <th>MovieId</th>
+    <th>Title</th>
+    <th>Genre</th>
+    <th>Director</th>
+  </tr>
+</table> -->
