--- a/Client/index.html
+++ b/Client/index.html
@@ -3,26 +3,79 @@
 <head>
     <title>jQuery AJAX POST Form</title>
     <meta charset="utf-8">
+    <style>
+    	body{
+    		font-size: 25px;
+    		font-family: Tahoma;
+    		font-style: bold;
+    	}
+    	div{
+    		font-size: 25px;
+    		font-family: Tahoma;
+    		padding: 0px;
+    		font-style: bold;
+    	}
+    	table{
+    		font-size: 20px;
+    		font-family: Tahoma;
+    		border: 3px solid black;
+    		padding: 0px;
+    		font-style: normal;
+    		width: 45%;
+    		text-align: left;
+    		background-color: grey;
+    	}
+    	tr{
+    		font-size: 20px;
+    		font-family: Tahoma;
+    	}
+    	td{
+    		font-size: 20px;
+    		font-family: Tahoma;    		
+    		background-color: grey;
+    	}
+    	form{
+    		font-size: 25px;
+    		font-family: Tahoma;
+    		padding: 25px;
+    		width: 45%;
+    	}
+    	input{
+    		font-size: 15px;
+    		font-family: Tahoma;
+    		border: 1px solid black;
+    		padding: 10px;
+    		font-style: italic;
+    		width: 200px;
+    		text-align: left;
+    		background-color: lightgrey;
+    	}
+    	button{
+    		font-size: 20px;
+    		font-family: Tahoma;
+    		font-style: italic;
+    	}
+    </style>
 </head>
 <body>
-<div 
-    id="response">
-    <pre></pre>
-</div>
+	<div 
+	    id="response">
+	    <pre></pre>
+	</div>
 
-<div>
+	<div>
 
-</div>
+	</div>
 
-<form id="my-form">
-    <input type="text" name="title" placeholder="Title" />
-    <input type="text" name="director" placeholder="Director" />
-    <input type="text" name="genre" placeholder="Genre" />
+	<form id="my-form">
+	    <input type="text" name="title" placeholder="Title" />
+	    <input type="text" name="director" placeholder="Director" />
+	    <input type="text" name="genre" placeholder="Genre" />
 
-        <button type="submit" value="Create" id="submit">Create</button>
-    </form>
+	        <button type="submit" value="Create" id="submit">Create</button>
+	    </form>
 
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-	<script type="text/javascript" src="app.js"></script>
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
+		<script type="text/javascript" src="app.js"></script>
 </body>
 </html>
