Completed the Get function and Post method. Working on put method.

--- a/Client/index.html
+++ b/Client/index.html
@@ -6,8 +6,7 @@
 </head>
 <body>
 
-<div 
-    id="response">
+<div id="response">
     <pre></pre>
 </div>
 
@@ -21,6 +20,7 @@
     <input type="text" name="genre" placeholder="Genre" />
 
     <button type="submit">Submit</button>
+    
 </form>
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
