Changed the layout. Working on updating a movie.

--- a/Client/index.html
+++ b/Client/index.html
@@ -3,6 +3,59 @@
 <head>
     <title>jQuery AJAX POST Form</title>
     <meta charset="utf-8">
+    <style>
+            body{
+                font-size: 25px;
+                font-family: Tahoma;
+                font-style: bold;
+            }
+            div{
+                font-size: 25px;
+                font-family: Tahoma;
+                padding: 0px;
+                font-style: bold;
+            }
+            table{
+                font-size: 20px;
+                font-family: Tahoma;
+                border: 3px solid black;
+                padding: 0px;
+                font-style: normal;
+                width: 45%;
+                text-align: left;
+                background-color: grey;
+            }
+            tr{
+                font-size: 20px;
+                font-family: Tahoma;
+            }
+            td{
+                font-size: 20px;
+                font-family: Tahoma;    		
+                background-color: grey;
+            }
+            form{
+                font-size: 25px;
+                font-family: Tahoma;
+                padding: 25px;
+                width: 45%;
+            }
+            input{
+                font-size: 15px;
+                font-family: Tahoma;
+                border: 1px solid black;
+                padding: 10px;
+                font-style: italic;
+                width: 200px;
+                text-align: left;
+                background-color: lightgrey;
+            }
+            button{
+                font-size: 20px;
+                font-family: Tahoma;
+                font-style: italic;
+            }
+        </style>
 </head>
 <body>
 
